# zonforge-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  railway.json  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
apps/anomaly-service/: Dockerfile  pyproject.toml
apps/anomaly-service/src/: config.py  db.py  logger.py  main.py
apps/anomaly-service/src/api/: routes.py
apps/anomaly-service/src/models/: baseline.py  detectors.py
apps/anomaly-service/src/services/: anomaly_orchestrator.py  baseline_store.py
apps/anomaly-service/src/workers/: baseline_builder.py
apps/anomaly-service/tests/: test_detectors.py
docs/: ARCHITECTURE.md  BILLING_FRONTEND_INTEGRATION.md  BRANCH_PROTECTION_CHECKLIST.md  DEMO.md  FRONTEND_BILLING_FLOW.md  LAUNCH_READINESS_REPORT.md  LOCAL_DEVELOPMENT.md  MAINTENANCE.md  PLATFORM_SERVICE_CATALOG.md  RELEASE_PROCESS.md  REPOSITORY_GOVERNANCE.md  ROADMAP.md  SECURITY.md  SECURITY_RESPONSE_PROCESS.md  SERVICE_MAP.md  STRIPE_TEST_MODE_RUNBOOK.md  TROUBLESHOOTING.md  VERIFICATION_INDEX.md
landing/: _redirects  dashboard.html  index.html  login.html  netlify.toml  robots.txt  signup.html
proof/: PRE_SERIAL_REPO_ROOT_LOCK.md  SERIAL_05_CUSTOMER_APP_CUTOVER.md  SERIAL_11_EVENT_INGESTION_PROOF.md  SERIAL_12_DETECTION_ENGINE.md  SERIAL_17_SUBSCRIPTION_SYSTEM.md  SERIAL_18_BILLING_DASHBOARD_ARCHITECTURE.md  serial11_ui_capture.mjs  (+6 more)
(+803 files in other folders)
