[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zonforge-anomaly-service"
version = "0.1.0"
description = "ZonForge Sentinel — Statistical Anomaly Detection Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.2.1",
    "asyncpg==0.29.0",
    "redis[hiredis]==5.0.4",
    "clickhouse-connect==0.7.16",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy[asyncio]==2.0.29",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "structlog==24.1.0",
    "apscheduler==3.10.4",
    "uuid7==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.4.2",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
